opam-version: "1.2"
authors: "John Else"
homepage: "https://github.com/johnelse/ocaml-promise-js"
bug-reports: "https://github.com/johnelse/ocaml-promise-js/issues"
dev-repo: "git://github.com/johnelse/ocaml-promise-js"
maintainer: "john.else@gmail.com"
available: [ ocaml-version >= "4.02.1" ]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
  [ "dune" "runtest" ] {with-test}
]

depends: [
  "dune"
  "js_of_ocaml"
  "js_of_ocaml-ppx"
  "ocaml" {>= "4.02.1"}
  "webtest-js" {test}
]
